# sarathi

./: .gitignore  LICENSE  Makefile  README.md  build_pkg.sh  pyproject.toml  pytest.ini  sarathi.yaml  setup.py  test_regex.py  test_tool_security.py
.github/workflows/: ci.yml
src/sarathi/cli/: banner.py  chat_cli.py  cli_handler.py  code_cli.py  config_cli.py  gendocstrings.py  model_cli.py  qahelper.py  registry.py  sbom_cli.py  sgit.py
src/sarathi/code/: code_agent.py  codetasks.py
src/sarathi/config/: config_manager.py
src/sarathi/llm/: agent_engine.py  async_llm.py  call_llm.py  llm_client.py  parallel_analyzer.py  prompts.py  response_parser.py  tool_library.py  tools.py
src/sarathi/utils/: formatters.py  io.py  usage.py
tests/: repro_analyzer.py  test_async_llm.py  test_chat_cli.py  test_cli.py  test_code_agent.py  test_codetasks.py  test_config.py  test_llm.py  test_prompts.py  test_regex.py  test_registry.py  test_repro_features.py  test_sbom.py  test_tool_library.py  test_tool_security.py  test_usage.py  test_utils.py
